Refactor: add Reactive pipeline